Add comparable valuation model v1
